--- a/index.html
+++ b/index.html
@@ -5,70 +5,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto:wght@300;400&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Survey Form</title>
 </head>
 
 <body>
-    <header>
-        <h1 id="title">TradeTree Survey</h1>
-        <p id="description">Do you have questions or comments for us? We'd love to hear them! Fill out the form and we
-            will
-            get back to you as soon as possible.</p>
-    </header>
-    <form id="survey-form">
-        <div class="form-group">
-            <label id="name-label" for="name">Name</label>
-            <input type="text" name="name" id="name" class="form-control" placeholder="Enter your name" required>
-        </div>
-        <div class="form-group">
-            <label id="email-label" for="email">Email</label>
-            <input type="email" name="email" id="email" class="form-control" placeholder="Enter your Email" required>
-        </div>
-        <div class="form-group">
-            <label id="number-label" for="number">Age<span class="clue">(optional)</span></label>
-            <input type="number" name="age" id="number" min="10" max="99" class="form-control" placeholder="Age">
-        </div>
-        <div class="form-group">
-            <p>Let us know which services you would like us to expand upon</p>
-            <select name="services" id="dropdown" class="form-control" required>
-                <option disabled selected value>Select Services</option>
-                <option value="seminars">Seminars</option>
-                <option value="touch-to-pay">Touch to Pay (mobile)</option>
-                <option value="trade">Trade Training</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <p>Would you recommend TradeTree to a friend?</p>
-            <label>
-                <input name="user-recommend" value="definitely" type="radio" class="input-radio" checked />
-                Definitely
-            </label>
-            <label>
-                <input name="user-recommend" value="maybe" type="radio" class="input-radio" />
-                Maybe
-            </label>
-            <label>
-                <input name="user-recommend" value="not-sure" type="radio" class="input-radio" />
-                Not Sure
-            </label>
-        </div>
-        <div class="form-group">
-            <p>What is your favorite feature of TradeTree?</p>
-            <select name="mostLike" id="most-like" class="form-control" required>
-                <option disabled selected value>Select an option</option>
-                <option value="rapid-updates">Rapid Updates</option>
-                <option value="future-projections">Future Projections</option>
-                <option value="unlimited-banking">Unlimited Banking Routes</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <p>What would you like to see improved?
-                <span class="clue">(Check all the apply</span>
-            </p>
-            <label><input type="prefer" value="business-account" type="checkbox" class="input-checkbox" />
-                Business Account</label>
-        </div>
-    </form>
+    <div class="container">
+        <header class="header">
+            <h1 id="title" class="text-center">TradeTree Survey Form</h1>
+            <p id="description" class="description text-center">Do you have questions or comments for us? We'd love to
+                hear them! Fill out the form and
+                we
+                will
+                get back to you as soon as possible.</p>
+        </header>
+        <form id="survey-form">
+            <div class="form-group">
+                <label id="name-label" for="name">Name</label>
+                <input type="text" name="name" id="name" class="form-control" placeholder="Enter your name" required>
+            </div>
+            <div class="form-group">
+                <label id="email-label" for="email">Email</label>
+                <input type="email" name="email" id="email" class="form-control" placeholder="Enter your Email"
+                    required>
+            </div>
+            <div class="form-group">
+                <label id="number-label" for="number">Age<span class="clue">(optional)</span></label>
+                <input type="number" name="age" id="number" min="10" max="99" class="form-control" placeholder="Age">
+            </div>
+            <div class="form-group">
+                <p>Let us know which services you would like us to expand upon</p>
+                <select name="services" id="dropdown" class="form-control" required>
+                    <option disabled selected value>Select Services</option>
+                    <option value="seminars">Seminars</option>
+                    <option value="touch-to-pay">Touch to Pay (mobile)</option>
+                    <option value="trade">Trade Training</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <p>Would you recommend TradeTree to a friend?</p>
+                <label>
+                    <input name="user-recommend" value="definitely" type="radio" class="input-radio" checked />
+                    Definitely
+                </label>
+                <label>
+                    <input name="user-recommend" value="maybe" type="radio" class="input-radio" />
+                    Maybe
+                </label>
+                <label>
+                    <input name="user-recommend" value="not-sure" type="radio" class="input-radio" />
+                    Not Sure
+                </label>
+            </div>
+            <div class="form-group">
+                <p>What is your favorite feature of TradeTree?</p>
+                <select name="mostLike" id="most-like" class="form-control" required>
+                    <option disabled selected value>Select an option</option>
+                    <option value="rapid-updates">Rapid Updates</option>
+                    <option value="future-projections">Future Projections</option>
+                    <option value="unlimited-banking">Unlimited Banking Routes</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <p>What would you like to see improved?
+                    <span class="clue">(Check all the apply)</span>
+                </p>
+
+                <label><input name="prefer" value="business-account" type="checkbox" class="input-checkbox">
+                    Business Account Option</label>
+                <label><input name="prefer" value="in-app-messages" type="checkbox" class="input-checkbox">
+                    In-App Messages With Peers</label>
+
+                <label><input name="prefer" value="Trending Options" type="checkbox" class="input-checkbox">
+                    Trending Options</label>
+
+                <label><input name="prefer" value="future-valuation" type="checkbox" class="input-checkbox">
+                    Future Valuations</label>
+
+                <label><input name="prefer" value="same-hour-transfers" type="checkbox" class="input-checkbox">
+                    Same-Hour Bank Transfers</label>
+            </div>
+            <div class="form-group">
+                <p>Any comments or suggestions?</p>
+                <textarea name="comment" id="comments" class="input-textarea"
+                    placeholder="Enter your comment here..."></textarea>
+            </div>
+            <div class="form-group">
+                <button type="submit" id="submit" class="submit-button">
+                    Submit
+                </button>
+            </div>
+        </form>
+    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 
